tests/spectest/array_copy.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\03\5e"
    "\78\00\5e\78\01\60\02\64\00\64\01\00\03\82\80\80"
    "\80\00\01\02\07\98\80\80\80\00\01\14\61\72\72\61"
    "\79\2e\63\6f\70\79\2d\69\6d\6d\75\74\61\62\6c\65"
    "\00\00\0a\96\80\80\80\00\01\90\80\80\80\00\00\20"
    "\00\41\00\20\01\41\00\41\00\fb\11\00\01\0b"
  )
  "array is immutable"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\03\5e"
    "\78\01\5e\77\00\60\02\64\00\64\01\00\03\82\80\80"
    "\80\00\01\02\07\9d\80\80\80\00\01\19\61\72\72\61"
    "\79\2e\63\6f\70\79\2d\70\61\63\6b\65\64\2d\69\6e"
    "\76\61\6c\69\64\00\00\0a\96\80\80\80\00\01\90\80"
    "\80\80\00\00\20\00\41\00\20\01\41\00\41\00\fb\11"
    "\00\01\0b"
  )
  "array types do not match"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8f\80\80\80\00\03\5e"
    "\78\01\5e\64\00\01\60\02\64\00\64\01\00\03\82\80"
    "\80\80\00\01\02\07\9c\80\80\80\00\01\18\61\72\72"
    "\61\79\2e\63\6f\70\79\2d\72\65\66\2d\69\6e\76\61"
    "\6c\69\64\2d\31\00\00\0a\96\80\80\80\00\01\90\80"
    "\80\80\00\00\20\00\41\00\20\01\41\00\41\00\fb\11"
    "\00\01\0b"
  )
  "array types do not match"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\93\80\80\80\00\04\5e"
    "\78\01\5e\64\00\01\5e\64\01\01\60\02\64\01\64\02"
    "\00\03\82\80\80\80\00\01\03\07\9c\80\80\80\00\01"
    "\18\61\72\72\61\79\2e\63\6f\70\79\2d\72\65\66\2d"
    "\69\6e\76\61\6c\69\64\2d\31\00\00\0a\96\80\80\80"
    "\00\01\90\80\80\80\00\00\20\00\41\00\20\01\41\00"
    "\41\00\fb\11\01\02\0b"
  )
  "array types do not match"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\95\80\80\80\00\05\5e"
  "\78\00\5e\78\01\60\01\7f\01\7f\60\00\00\60\03\7f"
  "\7f\7f\00\03\87\80\80\80\00\06\02\03\03\04\03\03"
  "\06\95\80\80\80\00\02\64\00\00\41\0a\41\0c\fb\06"
  "\00\0b\64\01\01\41\0c\fb\07\01\0b\07\85\81\80\80"
  "\00\06\0d\61\72\72\61\79\5f\67\65\74\5f\6e\74\68"
  "\00\00\14\61\72\72\61\79\5f\63\6f\70\79\2d\6e\75"
  "\6c\6c\2d\6c\65\66\74\00\01\15\61\72\72\61\79\5f"
  "\63\6f\70\79\2d\6e\75\6c\6c\2d\72\69\67\68\74\00"
  "\02\0a\61\72\72\61\79\5f\63\6f\70\79\00\03\19\61"
  "\72\72\61\79\5f\63\6f\70\79\5f\6f\76\65\72\6c\61"
  "\70\5f\74\65\73\74\2d\31\00\04\19\61\72\72\61\79"
  "\5f\63\6f\70\79\5f\6f\76\65\72\6c\61\70\5f\74\65"
  "\73\74\2d\32\00\05\0c\81\80\80\80\00\01\0a\9a\81"
  "\80\80\00\06\89\80\80\80\00\00\23\01\20\00\fb\0d"
  "\01\0b\90\80\80\80\00\00\d0\01\41\00\23\00\41\00"
  "\41\00\fb\11\01\00\0b\90\80\80\80\00\00\23\01\41"
  "\00\d0\00\41\00\41\00\fb\11\01\00\0b\90\80\80\80"
  "\00\00\23\01\20\00\23\00\20\01\20\02\fb\11\01\00"
  "\0b\a1\80\80\80\00\01\01\64\01\41\00\41\0c\fb\09"
  "\01\00\21\00\20\00\41\01\20\00\41\00\41\0b\fb\11"
  "\01\01\20\00\24\01\0b\a1\80\80\80\00\01\01\64\01"
  "\41\00\41\0c\fb\09\01\00\21\00\20\00\41\00\20\00"
  "\41\01\41\0b\fb\11\01\01\20\00\24\01\0b\0b\8f\80"
  "\80\80\00\01\01\0c\61\62\63\64\65\66\67\68\69\6a"
  "\6b\6c"
)
(module instance)
(assert_trap (invoke "array_copy-null-left") "null array reference")
(assert_trap (invoke "array_copy-null-right") "null array reference")
(assert_trap
  (invoke "array_copy" (i32.const 0xd) (i32.const 0x0) (i32.const 0x0))
  "out of bounds array access"
)
(assert_trap
  (invoke "array_copy" (i32.const 0x0) (i32.const 0xd) (i32.const 0x0))
  "out of bounds array access"
)
(assert_trap
  (invoke "array_copy" (i32.const 0x0) (i32.const 0x0) (i32.const 0xd))
  "out of bounds array access"
)
(assert_trap
  (invoke "array_copy" (i32.const 0x0) (i32.const 0x0) (i32.const 0xd))
  "out of bounds array access"
)
(assert_return
  (invoke "array_copy" (i32.const 0xc) (i32.const 0x0) (i32.const 0x0))
)
(assert_return
  (invoke "array_copy" (i32.const 0x0) (i32.const 0xc) (i32.const 0x0))
)
(assert_return (invoke "array_get_nth" (i32.const 0x0)) (i32.const 0x0))
(assert_return (invoke "array_get_nth" (i32.const 0x5)) (i32.const 0x0))
(assert_return (invoke "array_get_nth" (i32.const 0xb)) (i32.const 0x0))
(assert_trap
  (invoke "array_get_nth" (i32.const 0xc))
  "out of bounds array access"
)
(assert_return
  (invoke "array_copy" (i32.const 0x0) (i32.const 0x0) (i32.const 0x2))
)
(assert_return (invoke "array_get_nth" (i32.const 0x0)) (i32.const 0xa))
(assert_return (invoke "array_get_nth" (i32.const 0x1)) (i32.const 0xa))
(assert_return (invoke "array_get_nth" (i32.const 0x2)) (i32.const 0x0))
(assert_return (invoke "array_copy_overlap_test-1"))
(assert_return (invoke "array_get_nth" (i32.const 0x0)) (i32.const 0x61))
(assert_return (invoke "array_get_nth" (i32.const 0x1)) (i32.const 0x61))
(assert_return (invoke "array_get_nth" (i32.const 0x2)) (i32.const 0x62))
(assert_return (invoke "array_get_nth" (i32.const 0x5)) (i32.const 0x65))
(assert_return (invoke "array_get_nth" (i32.const 0xa)) (i32.const 0x6a))
(assert_return (invoke "array_get_nth" (i32.const 0xb)) (i32.const 0x6b))
(assert_return (invoke "array_copy_overlap_test-2"))
(assert_return (invoke "array_get_nth" (i32.const 0x0)) (i32.const 0x62))
(assert_return (invoke "array_get_nth" (i32.const 0x1)) (i32.const 0x63))
(assert_return (invoke "array_get_nth" (i32.const 0x5)) (i32.const 0x67))
(assert_return (invoke "array_get_nth" (i32.const 0x9)) (i32.const 0x6b))
(assert_return (invoke "array_get_nth" (i32.const 0xa)) (i32.const 0x6c))
(assert_return (invoke "array_get_nth" (i32.const 0xb)) (i32.const 0x6c))
